--- a/labelprint.glade
+++ b/labelprint.glade
@@ -20,6 +20,8 @@
           <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="halign">start</property>
+            <property name="valign">start</property>
             <property name="margin_left">5</property>
             <property name="margin_right">5</property>
             <property name="orientation">vertical</property>
@@ -308,15 +310,16 @@
             </child>
           </object>
           <packing>
-            <property name="expand">True</property>
-            <property name="fill">True</property>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkDrawingArea" id="img_label">
-            <property name="width_request">150</property>
+            <property name="width_request">500</property>
             <property name="visible">True</property>
+            <property name="sensitive">False</property>
             <property name="can_focus">False</property>
             <property name="margin_left">5</property>
             <property name="margin_right">5</property>
@@ -327,7 +330,7 @@
             <signal name="draw" handler="on_draw_label" swapped="no"/>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
