--- a/labelprint.glade
+++ b/labelprint.glade
@@ -248,6 +248,9 @@
                     <property name="use_stock">True</property>
                     <property name="image_position">top</property>
                     <property name="always_show_image">True</property>
+                    <signal name="button-press-event" handler="on_p_press" swapped="no"/>
+                    <signal name="button-release-event" handler="on_p_release" swapped="no"/>
+                    <signal name="clicked" handler="on_print_clicked" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
